[package]
name = "mcp2003a"
version = "0.0.7"
description = "Rust no_std LIN Bus communication using the MCP2003A LIN transceiver."
edition = "2021"
license = "MIT"
authors = ["Zach Grimaldi <zpg6@pitt.edu>"]
documentation = "https://docs.rs/mcp2003a"
repository = "https://github.com/zpg6/mcp2003a"
categories = ["embedded", "no-std"]
keywords = ["lin", "linbus", "mcp2003a", "automotive", "driver"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
