[package]
name = "mcp2003a"
version = "0.0.15"
description = "MCP2003A LIN transceiver driver with embedded-hal traits for no-std environments."
edition = "2021"
license = "MIT"
authors = ["Zach Grimaldi <zpg6@pitt.edu>"]
documentation = "https://docs.rs/mcp2003a"
repository = "https://github.com/zpg6/mcp2003a"
categories = ["embedded", "no-std"]
keywords = ["lin", "linbus", "mcp2003a", "automotive", "no-std"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
